demoapp/templates/adapter-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    amiga: "true"
  name: adapter-helm
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: adapter-helm
      amiga: "true"
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: adapter-helm
        amiga: "true"
    spec:
      containers:
      - env:
        - name: LOGSTASH_SOCKET
          value: logstash-helm:9800
        - name: ELASTIC_APM_PROFILING_INFERRED_SPANS_ENABLED
          value: "true"
        - name: ELASTIC_APM_SERVER_URLS
          value: https://apm-server-quickstart-apm-http:8200
        - name: ELASTIC_APM_VERIFY_SERVER_CERT
          value: "false"
        - name: ELASTIC_APM_SECRET_TOKEN
          valueFrom:
            secretKeyRef:
              key: secret-token
              name: apm-server-quickstart-apm-token
        - name: ELASTIC_APM_SERVICE_NAME
          value: MONADTST
        - name: ELASTIC_APM_SERVICE_VERSION
          value: 1.0.0-SNAPSHOT
        - name: ELASTIC_APM_APPLICATION_PACKAGES
          value: com.inditex.otec.monadtst
        - name: ELASTIC_APM_LOG_LEVEL
          value: DEBUG
        - name: ELASTIC_APM_LOG_FILE
          value: elastic-apm.log
        - name: ELASTIC_APM_INSTRUMENT
          value: "false"
        - name: ELASTIC_APM_ENABLE_LOG_CORRELATION
          value: "true"
        image: iiglesias/adapter
        imagePullPolicy: Always
        name: adapter-helm
        ports:
        - containerPort: 8090
          name: http
          protocol: TCP
        resources:
          limits:
            #cpu: 300m
            memory: 600Mi
          requests:
            memory: 180Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 5
