demoapp/templates/core-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    amiga: "true"
  name: core-helm
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: core-helm
      amiga: "true"
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: core-helm
        amiga: "true"
    spec:
      containers:
      - env:
        - name: PORT
          value: "9555"
        - name: LOGSTASH_SOCKET
          value: bilbao-logstash:9800
        - name: ELASTIC_APM_SERVER_URLS
          value: https://apm-server-quickstart-apm-http:8200
        - name: ELASTIC_APM_VERIFY_SERVER_CERT
          value: "false"
        - name: ELASTIC_APM_SECRET_TOKEN
          valueFrom:
            secretKeyRef:
              key: secret-token
              name: apm-server-quickstart-apm-token
        - name: ELASTIC_APM_SERVICE_NAME
          value: MONCRTST
        - name: ELASTIC_APM_SERVICE_VERSION
          value: 1.0.0-SNAPSHOT
        - name: ELASTIC_APM_APPLICATION_PACKAGES
          value: com.inditex.otec.moncrtst
        - name: ELASTIC_APM_PROFILING_INFERRED_SPANS_ENABLED
          value: "true"
        - name: ELASTIC_APM_PROFILING_INFERRED_SPANS_INCLUDED_CLASSES
          value: com.inditex.otec.moncrtst.*
        - name: ELASTIC_APM_INSTRUMENT
          value: "false"
        - name: ELASTIC_APM_ENABLE_LOG_CORRELATION
          value: "true"
        - name: MONGO_PASS
          valueFrom:
            secretKeyRef:
              key: mongodb-root-password
              name: bilbo-mongo-mongodb      
        - name: ELASTIC_PASS
          valueFrom:
            secretKeyRef:
              key: elastic
              name: quickstart-es-elastic-user                  
        image: iiglesias/core
        imagePullPolicy: Always
        name: core-helm
        ports:
        - containerPort: 8070
          name: rest
          protocol: TCP
        - containerPort: 6569
          name: grpc
          protocol: TCP
        resources:
          limits:
            #cpu: 300m
            memory: 900Mi
          requests:
            memory: 180Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 5
