demoapp/templates/adapter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: adapter-helm
  name: adapter-helm
spec:
  selector:
    app: adapter-helm
  ports:
    - port: 8090
      protocol: TCP
      targetPort: 8090
  sessionAffinity: None
  type: ClusterIP
