demoapp/templates/composite-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: composite-helm
  name: monitoringcomposite
spec:
  selector:
    app: composite-helm
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: rest
    - port: 6568
      protocol: TCP
      targetPort: 6568
      name: grpc
  sessionAffinity: None
  type: ClusterIP
