demoapp/templates/core-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: core-helm
  name: core-helm
  namespace: default
spec:
  selector:
    app: core-helm
  ports:
    - port: 8070
      protocol: TCP
      targetPort: 8070
    - port: 6569
      protocol: TCP
      targetPort: 6569
  sessionAffinity: None
  type: ClusterIP
