demoapp/templates/adapter-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: adapter-helm
  annotations:
    kubernetes.io/ingress.class: nginx
   # nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - adapter.multicloud.inditex.com
    secretName: tls-secret
  rules:
  - host: adapter.multicloud.inditex.com
    http:
      paths:
      - backend:
          serviceName: adapter-helm
          servicePort: 8090
        path: /MONADTST
    #  - backend:
    #      serviceName: aks-helloworld-two
    #      servicePort: 80
    #    path: /hello-world-two(/|$)(.*)
